# DRF_project

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py  wsgi.py
courses/: models.py  paginators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_last_notification_sent.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: fill_payments.py
users/migrations/: 0001_initial.py  0002_payment_payment_status_payment_stripe_payment_url_and_more.py  0002_user_avatar_user_city_user_phone_alter_user_email.py  0003_alter_user_options.py  0004_payment.py
